All: Followed recent renames in queueing.

--- a/examples/inet/tcpapp/omnetpp.ini
+++ b/examples/inet/tcpapp/omnetpp.ini
@@ -14,7 +14,7 @@ network = TcpAppExample
 *.server.app[0].listener.localPort = 1000
 
 [Config BurstyTraffic]
-*.server.app[0].connection[*].source.typename = "BurstyPacketProducer"
+*.server.app[0].connection[*].source.typename = "BurstyActivePacketSource"
 *.server.app[0].connection[*].source.normalProducer.productionInterval = 1s
 *.server.app[0].connection[*].source.normalProducer.packetLength = 100B
 *.server.app[0].connection[*].source.burstProducer.productionInterval = 0.1s
