sender.ini: fix: simulation must not reference anything from doc/, and especially not from doc/media/

--- a/showcases/emulation/voip/sender.ini
+++ b/showcases/emulation/voip/sender.ini
@@ -12,7 +12,7 @@ sim-time-limit = 47s
 *.app.voipSilenceThreshold = 100
 *.app.repeatCount = 2
 
-*.app.soundFile = "doc/media/Beatify_Dabei_cut.mp3"
+*.app.soundFile = "Beatify_Dabei_cut.mp3"
 
 *.app.localPort = -1
 *.app.destPort = 60001
