--- a/showcases/emulation/voip/receiver.ini
+++ b/showcases/emulation/voip/receiver.ini
@@ -1,10 +1,11 @@
 [General]
-network = VoipStreamReceiverNode
+network = VoipStreamNode
 scheduler-class = "inet::RealTimeScheduler"
 cmdenv-express-mode = true
 cmdenv-event-banners = true
 sim-time-limit = 50s
 
+*.app.typename = "VoipStreamReceiverNode"
 *.app.localPort = 60001
 *.app.resultFile = "results/received.wav"
 
