--- a/showcases/emulation/voip/sender.ini
+++ b/showcases/emulation/voip/sender.ini
@@ -1,10 +1,11 @@
 [General]
-network = VoipStreamSenderNode
+network = VoipStreamNode
 scheduler-class = "inet::RealTimeScheduler"
 cmdenv-express-mode = true
 cmdenv-event-banners = true
 sim-time-limit = 47s
 
+*.app.typename = "VoipStreamSenderNode"
 *.app.packetTimeLength = 20ms
 *.app.codec = "pcm_s16le"
 *.app.sampleRate = 32000Hz
