All: Replaced txQueueLimit with queue.frameCapacity.

--- a/tests/fingerprint/ethernet-bus-reconnect.ini
+++ b/tests/fingerprint/ethernet-bus-reconnect.ini
@@ -19,7 +19,7 @@ network = inet.tests.ethernet.HostsWithBus
 **.queue.typename = ${queue = "EtherQosQueue", "DropTailQueue"}
 **.queue.dataQueue.typename = "DropTailQueue"
 **.queue.dataQueue.frameCapacity = 100000  # external queue
-**.txQueueLimit = 100000  # internal queue
+**.queue.frameCapacity = 100000  # internal queue
  
 # traffic generator
 **.hostA.app.destAddress = "hostB"
