--- a/tests/misc/etherfixes/omnetpp-twohosts.ini
+++ b/tests/misc/etherfixes/omnetpp-twohosts.ini
@@ -15,7 +15,7 @@ network = TwoHosts
 **.frameBursting = ${burst = true, false}
 **.queue.typename = ${queue = "DropTailQueue", ""}
 **.queue.dataQueue.frameCapacity = 100000  # external queue
-**.txQueueLimit = 100000  # internal queue
+**.queue.frameCapacity = 100000  # internal queue
  
 # traffic generator
 **.hostA.app.destAddress = "hostB"
