--- a/tests/fingerprint/ethernet-hub.ini
+++ b/tests/fingerprint/ethernet-hub.ini
@@ -16,7 +16,7 @@ network = inet.tests.ethernet.HostsWithHub
 **.queue.typename = ${queue = "EtherQosQueue", "DropTailQueue"}
 **.queue.dataQueue.typename = "DropTailQueue"
 **.queue.dataQueue.frameCapacity = 100000  # external queue
-**.txQueueLimit = 100000  # internal queue
+**.queue.frameCapacity = 100000  # internal queue
 
 # traffic generator
 **.hostA.app.destAddress = "hostB"
