--- a/tests/fingerprint/ethernet-switch.ini
+++ b/tests/fingerprint/ethernet-switch.ini
@@ -16,7 +16,7 @@ network = inet.tests.ethernet.HostsWithSwitch
 **.queue.typename = ${queue = "EtherQosQueue", "DropTailQueue"}
 **.queue.dataQueue.typename = "DropTailQueue"
 **.queue.dataQueue.frameCapacity = 100000  # external queue
-**.txQueueLimit = 100000  # internal queue
+**.queue.frameCapacity = 100000  # internal queue
 
 # switch
 **.relayUnit.highWatermark = 10KiB
