--- a/tests/fingerprint/ethernet-twohosts.ini
+++ b/tests/fingerprint/ethernet-twohosts.ini
@@ -18,7 +18,7 @@ network = inet.tests.ethernet.TwoHosts
 **.queue.typename = ${queue = "EtherQosQueue", "DropTailQueue"}
 **.queue.dataQueue.typename = "DropTailQueue"
 **.queue.dataQueue.frameCapacity = 100000  # external queue
-**.txQueueLimit = 100000  # internal queue
+**.queue.frameCapacity = 100000  # internal queue
 
 # traffic generator
 **.hostA.app.destAddress = "hostB"
