--- a/tests/misc/etherfixes/omnetpp-switch.ini
+++ b/tests/misc/etherfixes/omnetpp-switch.ini
@@ -15,7 +15,7 @@ network = HostsWithSwitch
 **.frameBursting = ${burst = false}
 **.queue.typename = ${queue = "DropTailQueue", ""}
 **.queue.dataQueue.frameCapacity = 100000  # external queue
-**.txQueueLimit = 100000  # internal queue
+**.queue.frameCapacity = 100000  # internal queue
 
 # switch
 **.relayUnit.highWatermark = 10KiB
