All: Followed reverting renames in queueing package.

--- a/examples/inet/udpapp/omnetpp.ini
+++ b/examples/inet/udpapp/omnetpp.ini
@@ -16,7 +16,7 @@ network = UdpAppExample
 *.server.app[0].io.localPort = 1000
 *.server.app[0].io.destAddress = "client"
 *.server.app[0].io.destPort = 1000
-*.server.app[0].source.typename = "BurstyActivePacketSource"
+*.server.app[0].source.typename = "BurstyPacketProducer"
 *.server.app[0].source.normalProducer.productionInterval = 1s
 *.server.app[0].source.normalProducer.packetLength = 100B
 *.server.app[0].source.burstProducer.productionInterval = 0.1s
