tutorials: queueing improvements

--- a/tutorials/queueing/omnetpp.ini
+++ b/tutorials/queueing/omnetpp.ini
@@ -1,10 +1,11 @@
 [General]
 load-libs = inetqueueing
+cmdenv-event-banners = false
 
 [Config ActiveSourcePassiveSink]
 network = ProducerConsumerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = 1s
 
@@ -12,7 +13,7 @@ cmdenv-event-banners = false
 [Config ProducerConsumer]
 network = ProducerConsumerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = 1s
 
@@ -20,18 +21,20 @@ cmdenv-event-banners = false
 [Config Buffer]
 network = BufferNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
-*.producer.packetLength = 1B
-*.producer.productionInterval = uniform(0s, 1s)
-*.collector.collectionInterval = uniform(0s, 2s)
-*.queue.buffer.packetCapacity = 2
-*.queue.classifier.classifierClass = "TestClassifier"
+
+*.buffer.dropperClass = "inet::queueing::PacketAtCollectionBeginDropper"
+*.producer*.packetLength = 1B
+*.producer*.productionInterval = uniform(0s, 1s)
+*.collector*.collectionInterval = uniform(0s, 2s)
+*.queue*.bufferModule = "^.buffer"
+*.buffer.packetCapacity = 2
+
 
 
 [Config Burst1]
 network = Burst1Network
 sim-time-limit = 100s
-cmdenv-event-banners = false
+
 *.producer*.packetLength = 1B
 *.producer1.productionInterval = uniform(0s, 20s)
 *.producer2.productionInterval = uniform(0s, 2s)
@@ -42,7 +45,7 @@ cmdenv-event-banners = false
 [Config Burst2]
 network = Burst2Network
 sim-time-limit = 100s
-cmdenv-event-banners = false
+
 *.provider.packetLength = 1B
 *.collector1.collectionInterval = uniform(0s, 20s)
 *.collector2.collectionInterval = uniform(0s, 2s)
@@ -53,26 +56,26 @@ cmdenv-event-banners = false
 [Config Classifier]
 network = ClassifierNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = 1s
-*.classifier.classifierClass = "TestClassifier"
+*.classifier.weights = "1 1"
 
 
 [Config CompoundQueue]
 network = CompoundPacketQueueNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = uniform(0s, 2s)
 *.collector.collectionInterval = uniform(0s, 2s)
-*.queue.classifier.classifierClass = "TestClassifier"
+*.queue.classifier.weights = "1 1"
 
 
 [Config Delayer]
 network = DelayerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = 1s
 *.delayer.delay = uniform(0s, 2s)
@@ -81,7 +84,7 @@ cmdenv-event-banners = false
 [Config Demultiplexer]
 network = DemultiplexerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.provider.packetLength = 1B
 *.numCollectors = 3
 *.collector[*].collectionInterval = uniform(0s, 2s)
@@ -90,7 +93,7 @@ cmdenv-event-banners = false
 [Config Duplicator]
 network = DuplicatorNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = 1s
 *.duplicator.numDuplicates = intuniform(0, 1)
@@ -99,24 +102,34 @@ cmdenv-event-banners = false
 [Config Filter1]
 network = Filter1Network
 sim-time-limit = 10s
-cmdenv-event-banners = false
-*.producer.packetLength = 1B
+
+*.producer.packetLength = intuniform(1B, 2B)
 *.producer.productionInterval = 1s
-*.filter.filterClass = "TestFilter"
+*.filter.packetFilter = "totalLength(\"1 B\")"
 
 
 [Config Filter2]
 network = Filter2Network
 sim-time-limit = 10s
-cmdenv-event-banners = false
-*.provider.packetLength = 1B
+
+*.provider.packetLength = intuniform(1B, 2B)
 *.collector.collectionInterval = 1s
-*.filter.filterClass = "TestFilter"
+*.filter.packetFilter = "totalLength(\"1 B\")"
+
+# TODO: delete
+#[Config Filter3]
+#network = Filter3Network
+#sim-time-limit = 10s
+
+#*.producer.packetLength = intuniform(1B, 2B)
+#*.producer.productionInterval = 1s
+#*.filter.packetFilter = "totalLength(\"1 B\")"
+
 
 [Config Gate1]
 network = Gate1Network
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = 1s
 *.gate.openTime = 3s
@@ -125,7 +138,7 @@ cmdenv-event-banners = false
 [Config Gate2]
 network = Gate2Network
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.provider.packetLength = 1B
 *.collector.collectionInterval = 1s
 *.gate.openTime = 3s
@@ -136,7 +149,7 @@ cmdenv-event-banners = false
 [Config Interface]
 network = InterfaceNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.provider.packetLength = 1B
 *.provider.providingInterval = 0s
 *.server.initialNumTokens = 1
@@ -148,10 +161,11 @@ cmdenv-event-banners = false
 [Config Labeler]
 network = LabelerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = intuniform(1B, 2B)
 *.producer.productionInterval = 1s
-*.labeler.filterClasses = "TestSmall TestLarge"
+*.labeler.packetFilters = "totalLength(\"1 B\"); totalLength(\"2 B\")"
+*.labeler.packetDataFilters = "*;*"
 *.labeler.labels = "small large"
 *.classifier.labelsToGateIndices = "small 0 large 1"
 
@@ -159,7 +173,7 @@ cmdenv-event-banners = false
 [Config LeakyBucket]
 network = LeakyBucketNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = uniform(0s, 2s)
 *.bucket.server.processingTime = 1s
@@ -168,7 +182,7 @@ cmdenv-event-banners = false
 [Config Meter]
 network = MeterNetwork
 sim-time-limit = 100s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = 1s
 *.meter.alpha = 0.9
@@ -178,7 +192,7 @@ cmdenv-event-banners = false
 [Config Multiplexer]
 network = MultiplexerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.numProducers = 3
 *.producer[*].packetLength = 1B
 *.producer[*].productionInterval = uniform(0s, 2s)
@@ -187,7 +201,7 @@ cmdenv-event-banners = false
 [Config TestNetwork]
 network = TestNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.*.sourceApplication.packetLength = 1B
 *.*.sourceApplication.productionInterval = uniform(0s, 2s)
 *.*.mac.server.processingTime = uniform(0s, 2s)
@@ -197,7 +211,7 @@ cmdenv-event-banners = false
 [Config OrdinalBasedDropper]
 network = OrdinalBasedDropperNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = 1s
 *.dropper.dropsVector = "0; 2; 4; 6; 8; 10"
@@ -206,7 +220,7 @@ cmdenv-event-banners = false
 [Config OrdinalBasedDuplicator]
 network = OrdinalBasedDuplicatorNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = 1s
 *.duplicator.duplicatesVector = "0; 2; 4; 6; 8; 10"
@@ -215,15 +229,26 @@ cmdenv-event-banners = false
 [Config PassiveSourceActiveSink]
 network = ProviderCollectorNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.provider.packetLength = 1B
 *.collector.collectionInterval = 1s
+
+
+[Config PriorityBuffer]
+network = PriorityBufferNetwork
+sim-time-limit = 10s
+cmdenv-event-banners = false
+*.producer*.packetLength = 1B
+*.producer*.productionInterval = uniform(0s, 1s)
+*.collector*.collectionInterval = uniform(0s, 2s)
+*.queue*.bufferModule = "^.buffer"
+*.buffer.packetCapacity = 2
 
 
 [Config PriorityClassifier]
 network = PriorityClassifierNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.queue*.packetCapacity = 1
 *.producer.packetLength = 1B
 *.producer.productionInterval = uniform(0s, 1s)
@@ -233,11 +258,12 @@ cmdenv-event-banners = false
 [Config PriorityQueue]
 network = PriorityQueueNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = uniform(0s, 2s)
 *.queue.numQueues = 2
-*.queue.classifier.classifierClass = "TestClassifier"
+*.queue.classifier.typename = "WrrClassifier"
+*.queue.classifier.weights = "1 1"
 *.collector.collectionInterval = uniform(0s, 2s)
 
 
@@ -245,7 +271,7 @@ cmdenv-event-banners = false
 [Config PriorityScheduler]
 network = PrioritySchedulerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer*.packetLength = 1B
 *.producer*.productionInterval = uniform(0s, 2s)
 *.collector.collectionInterval = uniform(0s, 1s)
@@ -254,7 +280,7 @@ cmdenv-event-banners = false
 [Config QueueFiller]
 network = QueueFillerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.filler.provider.packetLength = 1B
 *.filler.tokenGenerator.queueModule = "queue"
 *.consumer.collectionInterval = 1s
@@ -263,7 +289,7 @@ cmdenv-event-banners = false
 [Config PacketQueue]
 network = PacketQueueNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = uniform(0s, 2s)
 *.collector.collectionInterval = uniform(0s, 2s)
@@ -272,21 +298,22 @@ cmdenv-event-banners = false
 [Config RedDropper]
 network = RedDropperNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = uniform(0s, 1s)
 *.collector.collectionInterval = uniform(0s, 2s)
-*.classifier.classifierClass = "TestClassifier"
+*.classifier.weights = "1 1"
 
 
 [Config RequestResponse]
 network = RequestResponseNetwork
 sim-time-limit = 100s
-cmdenv-event-banners = false
+
 *.requestProducer.packetLength = 1B
 *.requestProducer.productionInterval = uniform(0s, 2s)
 *.requestConsumer.numKind = 2
-*.requestConsumer.classifier.classifierClass = "RequestClassifier"
+*.requestConsumer.classifier.typename = "WrrClassifier"
+*.requestConsumer.classifier.weights = "1 1"
 *.requestConsumer.responseProducerModule = "^.responseProducer"
 *.requestConsumer.tokenGenerator[0].numTokensPerPacket = 10
 *.requestConsumer.tokenGenerator[1].numTokensPerPacket = 10
@@ -301,16 +328,16 @@ cmdenv-event-banners = false
 [Config Scheduler]
 network = SchedulerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.provider*.packetLength = 1B
 *.collector.collectionInterval = 1s
-*.scheduler.schedulerClass = "TestScheduler"
+*.scheduler.weights = "1 1"
 
 
 [Config Server]
 network = ServerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.provider.packetLength = 1B
 *.server.processingTime = uniform(0s, 2s)
 
@@ -318,41 +345,28 @@ cmdenv-event-banners = false
 [Config Tagger]
 network = TaggerNetwork
 sim-time-limit = 10s
-cmdenv-event-banners = false
+
 *.producer.packetLength = 1B
 *.producer.productionInterval = 1s
 *.tagger.hopLimit = 1
 
 
-
-[Config TokenBucket]
-network = TokenBucketNetwork
-sim-time-limit = 10s
-cmdenv-event-banners = false
-*.producer.packetLength = 1B
-*.producer.productionInterval = uniform(0s, 2s)
-*.bucket.server.maxNumTokens = 10
-*.bucket.server.tokenProductionInterval = uniform(0s, 2s)
-
 [Config Telnet]
-network = TelnetNetwork_
-
-**.client.numApps = 1
-**.client*.app[*].typename = "TelnetClientApp"
-**.client*.app[*].io.connectAddress = "server"
-**.client*.app[*].io.connectPort = 1000
-
-**.server.numApps = 1
-**.server*.app[*].typename = "TcpServerApp"
-**.server*.app[*].localPort = 1000
-**.server*.app[*].listener.serverConnectionModuleType = "inet.applications.tcpapp.TelnetServerConnection"
-**.server*.app[*].connection*.enterTokenGenerator.numTokensPerPacket = intuniform(0, 10)
-**.server*.app[*].connection*.responseProvider.packetLength = intuniform(100B, 1000B)
-**.server*.app[*].connection*.responseProvider.providingInterval = uniform(0s, 0.1s)
-
-[Config Tel2]
 network = TelnetNetwork
+sim-time-limit = 100s
 
 **.server.enterTokenGenerator.numTokensPerPacket = intuniform(0, 10)
 **.server.responseProvider.packetLength = intuniform(100B, 1000B)
 **.server.responseProvider.providingInterval = uniform(0s, 0.1s)
+
+
+[Config TokenBucket]
+network = TokenBucketNetwork
+sim-time-limit = 10s
+
+*.producer.packetLength = 1B
+*.producer.productionInterval = uniform(0s, 2s)
+*.bucket.server.maxNumTokens = 10
+*.tokenGenerator.serverModule = "^.bucket.server"
+*.tokenGenerator.generationInterval = uniform(0s, 2s)
+
