tutorials: Followed app changes.

--- a/tutorials/queueing/omnetpp.ini
+++ b/tutorials/queueing/omnetpp.ini
@@ -345,7 +345,7 @@ network = TelnetNetwork_
 **.server.numApps = 1
 **.server*.app[*].typename = "TcpServerApp"
 **.server*.app[*].localPort = 1000
-**.server*.app[*].listener.serverConnectionModuleType = "inet.applications.tcpapp.TelnetServerApp"
+**.server*.app[*].listener.serverConnectionModuleType = "inet.applications.tcpapp.TelnetServerConnection"
 **.server*.app[*].connection*.enterTokenGenerator.numTokensPerPacket = intuniform(0, 10)
 **.server*.app[*].connection*.responseProvider.packetLength = intuniform(100B, 1000B)
 **.server*.app[*].connection*.responseProvider.providingInterval = uniform(0s, 0.1s)
