examples: specify tcp.typename expicitly when using any tcptype-specific parameter

--- a/examples/bgpv4/BgpAndOspf/omnetpp.ini
+++ b/examples/bgpv4/BgpAndOspf/omnetpp.ini
@@ -18,6 +18,7 @@ output-scalar-precision = 5
 **.eth[*].mac.queue.dataQueue.packetCapacity = 100
 
 #tcp settings
+**.tcp.typename = "Tcp"
 **.tcp.mss = 1024
 **.tcp.advertisedWindow = 14336
 **.tcp.tcpAlgorithmClass = "TcpReno"
