--- a/examples/inet/redmarker/omnetpp.ini
+++ b/examples/inet/redmarker/omnetpp.ini
@@ -19,6 +19,7 @@ network = inet.examples.inet.redmarker.RedMarkerNetwork
 
 **.arp.typename = "GlobalArp"
 
+**.tcp.typename = "Tcp"
 **.tcp.delayedAcksEnabled = false                    # delayed ACK algorithm (RFC 1122) enabled/disabled
 **.tcp.nagleEnabled = false                           # Nagle's algorithm (RFC 896) enabled/disabled
 **.tcp.limitedTransmitEnabled = false                # Limited Transmit algorithm (RFC 3042) enabled/disabled (can be used for TCPReno/TCPTahoe/TCPNewReno/TCPNoCongestionControl)
