--- a/examples/inet/tcpwindowscale/omnetpp.ini
+++ b/examples/inet/tcpwindowscale/omnetpp.ini
@@ -47,6 +47,7 @@ sim-time-limit = 600.0s
 **.server.app[*].localPort = 10021
 
 # tcp settings
+**.tcp.typename = "Tcp"
 **.tcp.advertisedWindow = 65535                      # in bytes, corresponds with the maximal receiver buffer capacity (Note: normally, NIC queues should be at least this size)
 **.tcp.delayedAcksEnabled = false                    # delayed ACK algorithm (RFC 1122) enabled/disabled
 **.tcp.nagleEnabled = true                           # Nagle's algorithm (RFC 896) enabled/disabled
