--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -124,6 +124,7 @@ network = mIPv6Network
 # = ============================================================================================
 
 # tcp settings.
+**.tcp.typename = "Tcp"
 **.tcp.mss = 1024
 **.tcp.advertisedWindow = 14336  # 14*mss
 **.tcp.tcpAlgorithmClass = "TcpReno"
