--- a/examples/sctp/cmttest/omnetpp.ini
+++ b/examples/sctp/cmttest/omnetpp.ini
@@ -90,6 +90,7 @@ network = multihomed
 **.sctp_client.pcapRecorder[0].pcapLinkType = 204
 
 # tcp settings
+**.tcp.typename = "Tcp"
 **.tcp.mss = 1024
 **.tcp.advertisedWindow = 65535 #14336  # 14*mss
 **.tcp.tcpAlgorithmClass = "TcpReno"
