--- a/examples/voipstream/VoIPStreamTrafficTest/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamTrafficTest/omnetpp.ini
@@ -63,6 +63,7 @@ total-stack = 2MiB # increase if necessary
 **.host2.app[0].echoDelay = 0s
 
 # tcp settings
+**.tcp.typename = "Tcp"
 **.tcp.mss = 1024
 **.tcp.advertisedWindow = 14336  # 14*mss
 
