--- a/examples/bgpv4/Bgp2RoutersInAS/omnetpp.ini
+++ b/examples/bgpv4/Bgp2RoutersInAS/omnetpp.ini
@@ -19,6 +19,7 @@ output-vector-precision = 4
 **.eth[*].mac.queue.dataQueue.packetCapacity = 100
 
 #tcp settings
+**.tcp.typename = "Tcp"
 **.tcp.mss = 1024
 **.tcp.advertisedWindow = 14336
 **.tcp.tcpAlgorithmClass = "TcpReno"
