--- a/examples/emulation/extserver/omnetpp.ini
+++ b/examples/emulation/extserver/omnetpp.ini
@@ -48,6 +48,7 @@ scheduler-class = "inet::RealTimeScheduler" # needed for externalInterface
 **.server.app[*].localPort = 10021
 
 # tcp settings
+**.tcp.typename = "Tcp"
 **.tcp.advertisedWindow = 65535                      # in bytes, corresponds with the maximal receiver buffer capacity (Note: normally, NIC queues should be at least this size)
 **.tcp.delayedAcksEnabled = false                    # delayed ACK algorithm (RFC 1122) enabled/disabled
 **.tcp.nagleEnabled = true                           # Nagle's algorithm (RFC 896) enabled/disabled
