--- a/examples/httptools/socket/pairsocket/omnetpp.ini
+++ b/examples/httptools/socket/pairsocket/omnetpp.ini
@@ -66,6 +66,7 @@ sim-time-limit = 100d
 **.srv.app[0].activationTime = 0s
 
 # tcp settings
+**.tcp.typename = "Tcp"
 **.tcp.mss = 1024
 **.tcp.advertisedWindow = 14336  # 14*mss
 **.tcp.tcpAlgorithmClass = "TcpReno"
