--- a/examples/httptools/socket/tenserverssocket/omnetpp.ini
+++ b/examples/httptools/socket/tenserverssocket/omnetpp.ini
@@ -69,6 +69,7 @@ network = Http10Servers
 #
 
 # tcp settings
+**.tcp.typename = "Tcp"
 **.tcp.mss = 1024
 **.tcp.advertisedWindow = 14336  # 14*mss
 **.tcp.tcpAlgorithmClass = "TcpReno"
