--- a/examples/inet/netperfmeter/omnetpp.ini
+++ b/examples/inet/netperfmeter/omnetpp.ini
@@ -136,6 +136,7 @@ testNetwork.*.sctp.hbInterval            = 30 s
 testNetwork.*.sctp.enableHeartbeats      = true
 
 # ===== TCP Parameters ===================================
+testNetwork.*.tcp.typename = "Tcp"
 testNetwork.*.tcp.advertisedWindow       = 5000000
 testNetwork.*.tcp.mss                    = 1452
 testNetwork.*.tcp.tcpAlgorithmClass      = "TcpReno"
