--- a/showcases/general/pcaprecording/omnetpp.ini
+++ b/showcases/general/pcaprecording/omnetpp.ini
@@ -59,7 +59,7 @@ network = PcapRecordingShowcase
 *.router2.pcapRecorder[*].pcapLinkType = 1		# ethernet
 *.router2.pcapRecorder[*].moduleNamePatterns = "eth[*]"
 *.router2.pcapRecorder[*].pcapFile = "results/router2.tcpdata.pcap"
-*.router2.pcapRecorder[*].packetDataFilter = "*Ipv4Header and totalLengthField(576*)"
+*.router2.pcapRecorder[*].packetDataFilter = "*Ipv4Header and totalLengthField=~576*"
 
 *.ethHost2.numPcapRecorders = 1
 *.ethHost2.pcapRecorder[*].pcapLinkType = 101	# raw IP
