--- a/examples/adhoc/hostautoconf/omnetpp.ini
+++ b/examples/adhoc/hostautoconf/omnetpp.ini
@@ -11,6 +11,10 @@ sim-time-limit = 60min
 **.constraintAreaMaxY = 400m
 **.constraintAreaMaxZ = 0m
 
+# configurator
+**.host*.ipv4.configurator.typename = "HostAutoConfigurator"
+**.host*.ipv4.configurator.interfaces = "wlan0"
+
 # mobility
 **.host*.mobility.typename = "MassMobility"
 **.host*.mobility.initFromDisplayString = false
@@ -18,7 +22,6 @@ sim-time-limit = 60min
 **.host*.mobility.angleDelta = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(20mps, 8mps)
 **.host*.mobility.updateInterval = 100ms
-**.host*.ac_wlan.interfaces = "wlan0"
 
 # UdpBasicApp / UdpSink
 **.host*.numApps = 1
