examples, showcases: follow "mobility: GaussMarkovMobility: fixed missing variance parameter, #101"

--- a/showcases/mobility/basic/omnetpp.ini
+++ b/showcases/mobility/basic/omnetpp.ini
@@ -101,7 +101,8 @@ network = MobilityShowcase
 **.mobility.speed = 40mps
 
 **.mobility.margin = 0m
-**.mobility.variance = 0.5
+**.mobility.speedStdDev = 0.5mps
+**.mobility.angleStdDev = 0.5deg
 **.mobility.alpha = 0
 
 [Config StaticGridMobility]
