--- a/showcases/mobility/combining/omnetpp.ini
+++ b/showcases/mobility/combining/omnetpp.ini
@@ -79,7 +79,8 @@ network = MobilityShowcase
 **.mobility.element[1].speed = 10mps
 
 **.mobility.element[1].margin = 0m
-**.mobility.element[1].variance = 0.5
+**.mobility.element[1].speedStdDev = 0.5mps
+**.mobility.element[1].angleStdDev = 0.5deg
 **.mobility.element[1].alpha = 0
 
 **.mobility.element[1].constraintAreaMinX = 0m
