examples: added config for using 'TcpNoCongestionControl' tcp algorithm

--- a/examples/inet/tcpclientserver/omnetpp.ini
+++ b/examples/inet/tcpclientserver/omnetpp.ini
@@ -131,6 +131,14 @@ description = "inet_TCP <---> inet_TCP with DumbTcp algorithm"
 *.per = 0.01 * ${0, 0.1, 0.2, 0.5, 1, 2, 5}
 *.server*.app[0].echoFactor = 0
 
+[Config inet-nocongestioncontrol]
+description = "inet_TCP <---> inet_TCP with TcpNoCongestionControl algorithm"
+*.server*.tcp.typename = "Tcp"
+*.client*.tcp.typename = "Tcp"
+**.tcp.tcpAlgorithmClass = "TcpNoCongestionControl"
+*.per = 0.01 * ${0, 0.1, 0.2, 0.5, 1, 2, 5}
+*.server*.app[0].echoFactor = 0
+
 ###################################################################
 
 [General]
