Showcases: Added parameter to increase maxTransmissionDuration in sensor network.
Updated fingerprints. New fingerprints were generated using ReferenceCommunicationCache.

--- a/showcases/wireless/sensornetwork/omnetpp.ini
+++ b/showcases/wireless/sensornetwork/omnetpp.ini
@@ -6,6 +6,7 @@
 # misc
 **.arp.typename = "GlobalArp"
 *.gateway.forwarding = true
+**.maxTransmissionDuration = 100ms
 
 # configurator
 *.configurator.addStaticRoutes = false
