example: visualizing interface IP address

--- a/examples/inet/tcp_eth_reconnect/omnetpp.ini
+++ b/examples/inet/tcp_eth_reconnect/omnetpp.ini
@@ -23,6 +23,8 @@ description = ""
 network = ClientServerWithSM
 total-stack = 7MiB
 
+*.visualizer.*.interfaceTableVisualizer.displayInterfaceTables = true
+
 **.server.numPcapRecorders = 0
 **.server.pcapRecorder[0].pcapFile = "results/${configname}-${runnumber}-server.pcap"
 
