Include attractor example

--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -285,6 +285,17 @@ description = "mass+placerandomly"
 **.host*.mobility.typename = "TurtleMobility"
 **.host*.mobility.turtleScript = xmldoc("turtle.xml", "movements//movement[@id='6']")
 
+[Config AttractorMobility]
+network = MobileNetwork
+description = "attractor"
+*.numHosts = 2
+**.host*.mobility.typename = "RandomWaypointMobilityAttractor"
+
+**.host*.mobility.initFromDisplayString = false
+**.host*.mobility.speed = uniform(20mps,50mps)
+**.host*.mobility.xmlConfiguration = xmldoc("attractorConf.xml")
+**.host*.mobility.attractorId = "type_1"
+
 [Config AttachedMobility]
 network = MobileNetwork
 description = "attached"
