showcases: fixed configuration in Combining Mobility showcase

--- a/showcases/mobility/combining/omnetpp.ini
+++ b/showcases/mobility/combining/omnetpp.ini
@@ -133,7 +133,8 @@ sim-time-limit = 10000s
 # rover's mobility
 *.rover.mobility.typename = "LinearMobility"
 *.rover.mobility.speed = 0.05mps
-*.rover.mobility.angle = 0deg
+*.rover.mobility.initialMovementHeading = 0deg
+*.rover.mobility.faceForward = false
 
 # rover canvas image
 *.rover.canvasImage = "showcases/marsrover"
