showcases: minor fix

--- a/showcases/mobility/combining/omnetpp.ini
+++ b/showcases/mobility/combining/omnetpp.ini
@@ -119,7 +119,7 @@ network = MobilityShowcase
 
 *.host[1].mobility.faceForward = true
 
-**.displayStringTextFormat = "p: %p\nv: %v\nP: %P"
+*.*.mobility.displayStringTextFormat = "p: %p\nv: %v\nP: %P"
 
 *.visualizer.*.mobilityVisualizer.displayOrientations = false
 
