diffserv showcase: fingerprint mismatch fixed by copying the TrafficConditioner from examples/diffserv/simple_

--- a/showcases/general/diffserv/omnetpp.ini
+++ b/showcases/general/diffserv/omnetpp.ini
@@ -64,12 +64,13 @@ description = "Diffserv traffic conditioning and queueing is turn off"
 
 [Config WithPolicing]
 description = "Diffserv traffic conditioning is turned on in the ppp[0] interface of the router"
-**.router.ppp[0].egressTC.typename = "TrafficConditioner"
+**.router.ppp[0].egressTC.typename = "DiffservTrafficConditioner"
 **.efMeter.cir = "70%"
 **.efMeter.cbs = 50KiB
 **.defaultMeter.cir = "30%"
 **.defaultMeter.cbs = 2KiB
 **.defaultMeter.ebs = 4KiB
+
 
 ############################################################################
 
