Modified showcases/wireless/crosstalk example to test chirp function.

--- a/showcases/wireless/crosstalk/omnetpp.ini
+++ b/showcases/wireless/crosstalk/omnetpp.ini
@@ -4,14 +4,14 @@
 **.arp.typename = "GlobalArp"
 
 # visualizer settings
-*.visualizer.*.dataLinkVisualizer.displayLinks = true
-*.visualizer.*.physicalLinkVisualizer.displayLinks = true
+#*.visualizer.*.dataLinkVisualizer.displayLinks = true
+#*.visualizer.*.physicalLinkVisualizer.displayLinks = true
 
-*.visualizer.*.infoVisualizer.displayInfos = true
-*.visualizer.*.infoVisualizer.modules = "*.host*.app[0] *.host3.app[0] *.host*.wlan[0].mac.dcf.channelAccess.contention"
-*.visualizer.*.infoVisualizer.format = "%t"
+#*.visualizer.*.infoVisualizer.displayInfos = true
+#*.visualizer.*.infoVisualizer.modules = "*.host*.app[0] *.host3.app[0] *.host*.wlan[0].mac.dcf.channelAccess.contention"
+#*.visualizer.*.infoVisualizer.format = "%t"
 
-*.visualizer.*.mediumVisualizer.displaySignals = true
+#*.visualizer.*.mediumVisualizer.displaySignals = true
 
 # for video recording
 *.visualizer.**.fadeOutMode = "animationTime"
@@ -68,5 +68,26 @@ network = CrosstalkShowcasePartiallyOverlappingFrequencyBands
 
 *.host*.wlan[*].radio.transmitter.frequencyGains = "left c-b*1.5 -40dB linear c-b -28dB linear c-b*0.5-1MHz -20dB linear c-b*0.5+1MHz 0dB linear c+b*0.5-1MHz 0dB linear c+b*0.5+1MHz -20dB linear c+b -28dB linear c+b*1.5 -40dB right"
 
+#*.host*.wlan[*].radio.transmitter.frequencyGains = "left c-b*1.5 -40dB left c-b -28dB left c-b*0.5-1MHz -20dB left c-b*0.5+1MHz 0dB either c+b*0.5-1MHz 0dB right c+b*0.5+1MHz -20dB right c+b -28dB right c+b*1.5 -40dB right"
+
+*.physicalEnvironment.config = xmldoc("indoor.xml")
+*.physicalEnvironment.objectCache.typename = "BvhObjectCache"
+*.radioMedium.obstacleLoss.typename = "DielectricObstacleLoss"
+
+*.radioMedium.backgroundNoise.typename = "IsotropicDimensionalBackgroundNoise"
+*.radioMedium.backgroundNoise.power = nan dBmW
+*.radioMedium.backgroundNoise.powerSpectralDensity = -113dBmWpMHz
+
+#*.*.wlan[*].radio.antenna.typename = "ParabolicAntenna"
+#*.*.wlan[*].radio.antenna.beamWidth = 30deg
+#*.*.wlan[*].radio.antenna.maxGain = 10dB
+#*.*.wlan[*].radio.antenna.minGain = -20dB
+
+*.visualizer.*.radioVisualizer.displayAntennaLobes = true
+*.visualizer.*.mediumVisualizer.displayMainPowerDensityMap = true
+*.visualizer.*.mediumVisualizer.displayPowerDensityMaps = true
+#*.visualizer.*.mediumVisualizer.powerDensityMapPixmapWidth = 150
+#*.visualizer.*.mediumVisualizer.powerDensityMapPixmapHeight = 100
+*.visualizer.*.mediumVisualizer.displaySpectograms = true
 *.visualizer.*.mediumVisualizer.displaySpectrums = true
 *.visualizer.*.physicalLinkVisualizer.displayLinks = false
