showcases: followed changes in omnetpp

--- a/showcases/wireless/crosstalk/omnetpp.ini
+++ b/showcases/wireless/crosstalk/omnetpp.ini
@@ -8,7 +8,7 @@
 *.visualizer.*.physicalLinkVisualizer.displayLinks = true
 
 *.visualizer.*.infoVisualizer.displayInfos = true
-*.visualizer.*.infoVisualizer.modules = "*.host*.app[0] *.host3.app[0] *.host*.wlan[0].mac.dcf.channelAccess.contention"
+*.visualizer.*.infoVisualizer.modules = "*.host*.app[0] *.host3.app[0] OR *.host*.wlan[0].mac.dcf.channelAccess.contention"
 *.visualizer.*.infoVisualizer.format = "%t"
 
 *.visualizer.*.mediumVisualizer.displaySignals = true
