Queueing: Dropped RedMarker module.
It's functinality is already present in RedDropper and it adds basically nothing.

--- a/examples/inet/redmarker/omnetpp.ini
+++ b/examples/inet/redmarker/omnetpp.ini
@@ -3,7 +3,8 @@ network = inet.examples.inet.redmarker.RedMarkerNetwork
 
 
 # Queue setting
-**.routerCore*.eth[*].mac.queue.typename       = "RedMarkerQueue"
+**.routerCore*.eth[*].mac.queue.typename       = "RedDropperQueue"
+**.routerCore*.eth[*].mac.queue.red.useEcn     = true
 **.routerCore*.eth[*].mac.queue.red.wq         = 1 #0.002 #0.8
 **.routerCore*.eth[*].mac.queue.red.minth      = 3 #"5"
 **.routerCore*.eth[*].mac.queue.red.maxth      = 4
