showcases: followed LinearMobility parameter name change

--- a/showcases/mobility/basic/omnetpp.ini
+++ b/showcases/mobility/basic/omnetpp.ini
@@ -63,7 +63,7 @@ network = MobilityShowcase
 
 *.host[0].mobility.typename = "LinearMobility"
 *.host[0].mobility.speed = 40mps
-*.host[0].mobility.angle = uniform(0deg, 360deg)
+*.host[0].mobility.initialMovementHeading = uniform(0deg, 360deg)
 
 *.host[0].mobility.initialX = 200m
 *.host[0].mobility.initialY = 200m
